--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,9 @@
 section{
     text-align: center;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    padding: 0.2em;
+    font-size: 1.1em;
 }
 
 .sticky{
@@ -83,3 +87,15 @@ section{
   .tooltip:hover .tooltiptext {
     visibility: visible;
   }
+
+  @media screen and (max-width: 800px) 
+{
+    section{
+        font-size: 0.9em;
+    }
+
+    .color_btn_dark, .color_btn_light {
+        padding: 0.5em;
+        font-size: 0.9em;
+    }
+}
